refactor: Rename organization portal to workspace portal and update related documentation
- Updated all references from "organization" to "workspace" across configuration, source, and documentation files to reflect the new terminology.
- Adjusted search and routing logic to accommodate the new workspace portal, ensuring seamless navigation and functionality.
- Enhanced documentation content to clarify the purpose and features of the workspace portal for users.

--- a/src/content/docs/workspace/en/analytics/dashboard.mdx
+++ b/src/content/docs/workspace/en/analytics/dashboard.mdx
@@ -1,11 +1,11 @@
 ---
 title: Analytics Dashboard
-description: Track your organization's performance with comprehensive analytics and reporting.
+description: Track your workspace's performance with comprehensive analytics and reporting.
 ---
 
 # Analytics Dashboard
 
-Your Partner Dashboard provides comprehensive analytics to help you track performance, optimize operations, and grow your organization.
+Your Partner Dashboard provides comprehensive analytics to help you track performance, optimize operations, and grow your workspace.
 
 ## Dashboard Overview
 
@@ -26,10 +26,10 @@ Access your analytics at **Partner Dashboard** → **Analytics**.
 
 ### Revenue Overview
 
-Track your organization's financial performance:
+Track your workspace's financial performance:
 
 - **Gross Bookings**: Total value of all bookings
-- **Organization Revenue**: Your marketing fee earnings
+- **Workspace Revenue**: Your marketing fee earnings
 - **Expert Payouts**: Amount paid to your team
 - **Platform Fees**: Eleva's platform charges
 
@@ -85,7 +85,7 @@ Profile Views → Booking Started → Booking Completed → Attended
 
 See where patients come from:
 
-- Direct (your organization profile)
+- Direct (your workspace profile)
 - Search (Eleva Care search)
 - Expert profile
 - External referral
@@ -180,7 +180,7 @@ Export data for external analysis:
 Compare your performance:
 
 - Industry benchmarks
-- Similar organization comparison
+- Similar workspace comparison
 - Best practices insights
 
 ## Using Analytics Effectively
@@ -259,10 +259,10 @@ If you have questions about your data:
 ## Next Steps
 
 <Cards>
-  <Card title="Optimize Performance" href="/docs/organization/team/experts">
+  <Card title="Optimize Performance" href="/docs/workspace/team/experts">
     Use insights to improve expert performance
   </Card>
-  <Card title="Grow Revenue" href="/docs/organization/pricing/revenue">
+  <Card title="Grow Revenue" href="/docs/workspace/pricing/revenue">
     Understand how to increase your earnings
   </Card>
 </Cards>
