--- a/src/content/docs/workspace/en/getting-started/setup.mdx
+++ b/src/content/docs/workspace/en/getting-started/setup.mdx
@@ -1,32 +1,32 @@
 ---
-title: Set Up Your Organization
-description: Complete guide to setting up your organization on Eleva Care platform.
+title: Set Up Your Workspace
+description: Complete guide to setting up your workspace on Eleva Care platform.
 ---
 
-# Set Up Your Organization
+# Set Up Your Workspace
 
-This guide walks you through the complete setup process for your organization on Eleva Care—whether you're a medical practice, wellness center, employer, or healthcare institution.
+This guide walks you through the complete setup process for your workspace on Eleva Care—whether you're a medical practice, wellness center, employer, or healthcare institution.
 
 ## Step 1: Apply for Partnership
 
-Before you can set up your organization, you need to apply for partnership:
+Before you can set up your workspace, you need to apply for partnership:
 
 1. Visit [eleva.care/contact?partner=true](https://eleva.care/contact?partner=true)
 2. Fill out the partnership application form
-3. Provide your organization credentials and services
+3. Provide your credentials and services
 4. Our team will review your application (typically 5 business days)
 
 <Callout type="info">
-  **Approval Requirements**: We review your organization credentials, services offered, and alignment with our women's health mission.
+  **Approval Requirements**: We review your credentials, services offered, and alignment with our women's health mission.
 </Callout>
 
-## Step 2: Create Organization Profile
+## Step 2: Create Your Workspace Profile
 
 Once approved, you'll have access to the Partner Dashboard:
 
 ### Basic Information
 
-- **Organization Name**: Your practice or business name
+- **Workspace Name**: Your practice or business name (e.g., "Dr. Patricia's Wellness Center")
 - **Description**: A compelling description of your services (up to 500 characters)
 - **Logo**: High-resolution logo (recommended: 400x400px, PNG or SVG)
 - **Cover Image**: Banner image for your profile (recommended: 1200x400px)
@@ -35,12 +35,12 @@ Once approved, you'll have access to the Partner Dashboard:
 
 - **Business Email**: Primary contact for partnership communications
 - **Phone Number**: Business phone (optional)
-- **Website**: Your organization's website URL
+- **Website**: Your website URL
 - **Address**: Physical location (if applicable)
 
 ### Service Categories
 
-Select the healthcare categories your organization covers:
+Select the healthcare categories your workspace covers:
 
 - Women's Health & OB/GYN
 - Mental Health & Therapy
@@ -70,51 +70,51 @@ Select the healthcare categories your organization covers:
 
 ## Step 4: Set Your Marketing Fee
 
-As an organization, you earn a marketing fee from each booking made through your experts:
+As a workspace owner, you earn a marketing fee from each booking made through your experts:
 
-| Organization Tier | Marketing Fee | Expert Minimum |
-|-------------------|---------------|----------------|
+| Workspace Tier | Marketing Fee | Expert Minimum |
+|----------------|---------------|----------------|
 | Basic | 10-15% | 70% |
 | Standard | 15-20% | 65% |
 | Premium | 20-25% | 60% |
 
-**Example**: For a $100 booking with 15% organization fee:
+**Example**: For a $100 booking with 15% workspace fee:
 - Eleva Platform: $8-12 (8-12%)
-- Your Organization: $15 (15%)
+- Your Workspace: $15 (15%)
 - Expert: $73-77 (73-77%)
 
-[Learn more about revenue sharing →](/docs/organization/pricing/revenue)
+[Learn more about revenue sharing →](/docs/workspace/pricing/revenue)
 
 ## Step 5: Invite Your Team
 
-Once your organization is set up, invite your healthcare professionals:
+Once your workspace is set up, invite your healthcare professionals:
 
 1. Go to **Team Management** in your dashboard
 2. Click **Invite Expert**
 3. Enter the expert's email address
-4. They'll receive an invitation to join your organization
+4. They'll receive an invitation to join your workspace
 
-[Learn about team management →](/docs/organization/team/experts)
+[Learn about team management →](/docs/workspace/team/experts)
 
 ## Step 6: Go Live
 
-Before publishing your organization:
+Before publishing your workspace:
 
-- [ ] Organization profile is complete
+- [ ] Workspace profile is complete
 - [ ] Stripe account is connected
 - [ ] Marketing fee is configured
 - [ ] At least one expert has joined
 - [ ] Expert profiles are complete and published
 
-Click **Publish Organization** to make your organization visible to patients!
+Click **Publish Workspace** to make your workspace visible to patients!
 
 ## Next Steps
 
 <Cards>
-  <Card title="Customize Branding" href="/docs/organization/getting-started/branding">
-    Make your organization stand out with custom branding
+  <Card title="Customize Branding" href="/docs/workspace/getting-started/branding">
+    Make your workspace stand out with custom branding
   </Card>
-  <Card title="Invite Experts" href="/docs/organization/team/invitations">
+  <Card title="Invite Experts" href="/docs/workspace/team/invitations">
     Learn how to onboard your healthcare professionals
   </Card>
 </Cards>
