--- a/src/content/docs/workspace/en/pricing/plans.mdx
+++ b/src/content/docs/workspace/en/pricing/plans.mdx
@@ -1,11 +1,11 @@
 ---
-title: Partnership Plans
-description: Compare Eleva Care partnership plans and choose the right one for your organization.
+title: Workspace Plans
+description: Compare Eleva Care workspace plans and choose the right one for your needs.
 ---
 
-# Partnership Plans
+# Workspace Plans
 
-Choose the partnership plan that fits your organization's size and needs. All plans include platform access, payment processing, and partner support.
+Choose the workspace plan that fits your size and needs. All plans include platform access, payment processing, and partner support.
 
 ## Plan Comparison
 
@@ -16,7 +16,7 @@ Choose the partnership plan that fits your organization's size and needs. All pl
 | **Analytics** | Basic | Advanced | Enterprise |
 | **Support** | Email | Priority | 24/7 + Account Manager |
 | **Branding** | Standard | Custom booking pages | Full white-label |
-| **Domain** | eleva.care/org | Custom slug | Custom domain |
+| **Domain** | eleva.care/ws | Custom slug | Custom domain |
 | **API Access** | ❌ | ❌ | ✅ |
 | **Multi-location** | ❌ | ✅ | ✅ |
 | **SLA** | Standard | 99.5% uptime | Custom |
@@ -41,7 +41,7 @@ Choose the partnership plan that fits your organization's size and needs. All pl
 - Solo practitioners expanding to a small team
 - Wellness coaches forming a group practice
 - Specialty practices testing digital services
-- New organizations building their team
+- New workspaces building their team
 
 ## Professional Plan — €199/month
 
@@ -58,17 +58,17 @@ Everything in Starter, plus:
 - Marketing support and resources
 - Team management dashboard
 - Multi-location support
-- Custom domain integration (`eleva.care/your-organization`)
+- Custom domain integration (`eleva.care/your-workspace`)
 
 ### Best For
 
 - Growing multi-provider practices
 - Established wellness centers
-- Organizations with multiple locations
+- Workspaces with multiple locations
 - Practices focused on scaling
 
 <Callout type="tip">
-  **Most Popular**: Professional is our most popular plan for organizations with 4-10 healthcare professionals.
+  **Most Popular**: Professional is our most popular plan for workspaces with 4-10 healthcare professionals.
 </Callout>
 
 ## Enterprise Plan — Custom Pricing
@@ -99,7 +99,7 @@ Everything in Professional, plus:
 
 ## Volume Discounts
 
-Organizations with larger teams may qualify for volume discounts:
+Workspaces with larger teams may qualify for volume discounts:
 
 | Team Size | Discount |
 |-----------|----------|
@@ -121,8 +121,8 @@ Contact our sales team to discuss volume pricing.
 
 ### Partner Benefits
 
-- **Onboarding Support**: Help setting up your organization
-- **Documentation**: Access to Partner Portal resources
+- **Onboarding Support**: Help setting up your workspace
+- **Documentation**: Access to Workspace Portal resources
 - **Community**: Join our partner community
 - **Updates**: Regular platform improvements
 
@@ -172,10 +172,10 @@ No setup fees. You pay only the monthly subscription and the platform fees on bo
 ## Next Steps
 
 <Cards>
-  <Card title="Understand Revenue Sharing" href="/docs/organization/pricing/revenue">
+  <Card title="Understand Revenue Sharing" href="/docs/workspace/pricing/revenue">
     Learn how revenue is distributed between parties
   </Card>
-  <Card title="Set Up Your Organization" href="/docs/organization/getting-started/setup">
+  <Card title="Set Up Your Workspace" href="/docs/workspace/getting-started/setup">
     Get started with your partnership
   </Card>
 </Cards>
