--- a/src/content/docs/workspace/en/pricing/revenue.mdx
+++ b/src/content/docs/workspace/en/pricing/revenue.mdx
@@ -1,15 +1,15 @@
 ---
 title: Revenue Sharing Model
-description: Understand how revenue is distributed between patients, experts, organizations, and Eleva Care.
+description: Understand how revenue is distributed between patients, experts, workspaces, and Eleva Care.
 ---
 
 # Revenue Sharing Model
 
-Eleva Care uses a transparent three-party revenue model that ensures fair compensation for everyone involved—patients, experts, organizations, and the platform.
+Eleva Care uses a transparent three-party revenue model that ensures fair compensation for everyone involved—patients, experts, workspaces, and the platform.
 
 ## How It Works
 
-When a patient books an appointment through your organization:
+When a patient books an appointment through your workspace:
 
 ```
 Patient pays $100 for consultation
@@ -18,7 +18,7 @@ Patient pays $100 for consultation
 │        REVENUE DISTRIBUTION        │
 ├────────────────────────────────────┤
 │ Eleva Platform Fee    8-20%        │
-│ Your Organization Fee 10-25%       │
+│ Your Workspace Fee    10-25%       │
 │ Expert Payment        60-82%       │
 └────────────────────────────────────┘
 ```
@@ -38,12 +38,12 @@ Paid by the expert for platform services:
 
 **Covers**: Technology platform, payment processing, video infrastructure, support
 
-### 2. Organization Marketing Fee (10-25%)
+### 2. Workspace Marketing Fee (10-25%)
 
-Your organization's revenue for patient acquisition:
+Your workspace's revenue for patient acquisition:
 
-| Organization Tier | Marketing Fee |
-|-------------------|---------------|
+| Workspace Tier | Marketing Fee |
+|----------------|---------------|
 | Basic | 10-15% |
 | Standard | 15-20% |
 | Premium | 20-25% |
@@ -63,50 +63,50 @@ The healthcare professional's net earnings:
 
 ## Real-World Examples
 
-### Example 1: Community Expert in Your Organization
+### Example 1: Community Expert in Your Workspace
 
 ```
 Booking: $100 consultation
 Expert: Community tier, monthly plan
-Organization: 18% marketing fee
+Workspace: 18% marketing fee
 
 Breakdown:
 ├─ Eleva Platform Fee: $12.00 (12%)
-├─ Your Organization Fee: $18.00 (18%)
+├─ Your Workspace Fee: $18.00 (18%)
 └─ Expert Net: $70.00 (70%)
 
 Total fees: 30% ✅ (within 40% max)
 Expert share: 70% ✅ (above 60% min)
 ```
 
-### Example 2: Top Expert in Your Organization
+### Example 2: Top Expert in Your Workspace
 
 ```
 Booking: $150 therapy session
 Expert: Top tier, annual plan
-Organization: 15% marketing fee
+Workspace: 15% marketing fee
 
 Breakdown:
 ├─ Eleva Platform Fee: $12.00 (8%)
-├─ Your Organization Fee: $22.50 (15%)
+├─ Your Workspace Fee: $22.50 (15%)
 └─ Expert Net: $115.50 (77%)
 
 Total fees: 23% ✅ (within 40% max)
 Expert share: 77% ✅ (above 60% min)
 ```
 
-### Example 3: Monthly Organization Revenue
+### Example 3: Monthly Workspace Revenue
 
 ```
-Your Organization: 5 experts, 100 total appointments
+Your Workspace: 5 experts, 100 total appointments
 Average booking: $100
 Marketing fee: 15%
 
 Monthly Revenue:
 ├─ Gross bookings: $10,000
-├─ Your organization revenue: $1,500 (15%)
+├─ Your workspace revenue: $1,500 (15%)
 ├─ Workspace subscription: $199 (if Professional plan)
-└─ Total organization income: ~$1,699/month
+└─ Total workspace income: ~$1,699/month
 
 Annual projection: ~$20,388/year
 ```
@@ -154,7 +154,7 @@ To set your marketing fee:
 | Maximum total fees | 40% |
 | Fee change notice | 30 days |
 
-### For Organizations
+### For Workspaces
 
 | Rule | Limit |
 |------|-------|
@@ -167,53 +167,53 @@ To set your marketing fee:
 If you try to set a 30% marketing fee:
 
 ```
-Error: Organization fee (30%) would exceed maximum (25%)
+Error: Workspace fee (30%) would exceed maximum (25%)
 Action: Please set a fee between 10-25%
 ```
 
 If combined fees would exceed 40%:
 
 ```
-Error: Combined fees (35% organization + 12% platform = 47%) 
+Error: Combined fees (35% workspace + 12% platform = 47%) 
        would exceed maximum 40% for Community Expert.
-Action: Reduce organization fee or wait for expert tier upgrade.
+Action: Reduce workspace fee or wait for expert tier upgrade.
 ```
 
 ## Expert Tier Benefits
 
-Experts keep their tier benefits when joining your organization:
+Experts keep their tier benefits when joining your workspace:
 
-### Community Expert in Organization
+### Community Expert in Workspace
 
 ```
-Solo: 80-88% net (no organization fee)
-With Organization: 60-77% net (includes organization fee)
+Solo: 80-88% net (no workspace fee)
+With Workspace: 60-77% net (includes workspace fee)
 
 Trade-off: Lower net per booking
-Benefit: More bookings from organization's patients
+Benefit: More bookings from workspace's patients
 ```
 
-### Top Expert in Organization
+### Top Expert in Workspace
 
 ```
-Solo: 85-92% net (no organization fee)
-With Organization: 65-82% net (includes organization fee)
+Solo: 85-92% net (no workspace fee)
+With Workspace: 65-82% net (includes workspace fee)
 
 Trade-off: Lower net per booking
-Benefit: More bookings from organization's patients
+Benefit: More bookings from workspace's patients
 ```
 
-## Comparison: Solo vs. Organization
+## Comparison: Solo vs. Workspace
 
 Help experts understand the value:
 
-| Metric | Solo Expert | With Your Organization |
-|--------|-------------|------------------------|
+| Metric | Solo Expert | With Your Workspace |
+|--------|-------------|---------------------|
 | Net per booking | 80-92% | 60-82% |
-| Patient acquisition | Self | Organization provides |
-| Marketing costs | Self | Organization covers |
-| Admin support | None | Organization provides |
-| Brand value | Individual | Organization |
+| Patient acquisition | Self | Workspace provides |
+| Marketing costs | Self | Workspace covers |
+| Admin support | None | Workspace provides |
+| Brand value | Individual | Workspace |
 
 ## Reporting & Analytics
 
@@ -222,7 +222,7 @@ Help experts understand the value:
 Your Partner Dashboard shows:
 
 - **Gross Bookings**: Total booking value
-- **Your Revenue**: Organization marketing fees earned
+- **Your Revenue**: Workspace marketing fees earned
 - **Expert Payouts**: Amount paid to experts
 - **Platform Fees**: Eleva's platform fees
 
@@ -238,10 +238,10 @@ Download reports for:
 ## Next Steps
 
 <Cards>
-  <Card title="View Analytics" href="/docs/organization/analytics/dashboard">
+  <Card title="View Analytics" href="/docs/workspace/analytics/dashboard">
     See detailed revenue reports
   </Card>
-  <Card title="Manage Experts" href="/docs/organization/team/experts">
+  <Card title="Manage Experts" href="/docs/workspace/team/experts">
     Optimize your team's performance
   </Card>
 </Cards>
