--- a/src/content/docs/workspace/en/team/experts.mdx
+++ b/src/content/docs/workspace/en/team/experts.mdx
@@ -1,11 +1,11 @@
 ---
 title: Manage Your Experts
-description: Learn how to invite, manage, and support healthcare professionals in your organization.
+description: Learn how to invite, manage, and support healthcare professionals in your workspace.
 ---
 
 # Manage Your Experts
 
-Your team of healthcare professionals is the heart of your organization. This guide covers everything you need to know about managing experts on Eleva Care.
+Your team of healthcare professionals is the heart of your workspace. This guide covers everything you need to know about managing experts on Eleva Care.
 
 ## Expert Types
 
@@ -13,8 +13,8 @@ Your team of healthcare professionals is the heart of your organization. This gu
 
 Healthcare professionals employed by or contracted with your organization:
 
-- Work exclusively or primarily through your organization
-- Use your organization's branding
+- Work exclusively or primarily through your workspace
+- Use your workspace's branding
 - Subject to your marketing fee
 - Managed through your dashboard
 
@@ -22,12 +22,12 @@ Healthcare professionals employed by or contracted with your organization:
 
 Independent professionals from Eleva Care's expert network:
 
-- Work with multiple organizations
+- Work with multiple workspaces
 - Maintain their individual brand
-- Subject to your marketing fee when booked through your organization
-- Can be featured on your organization profile
+- Subject to your marketing fee when booked through your workspace
+- Can be featured on your workspace profile
 
-## Adding Experts to Your Organization
+## Adding Experts to Your Workspace
 
 ### Option 1: Invite Existing Eleva Care Experts
 
@@ -35,8 +35,8 @@ If the expert already has an Eleva Care profile:
 
 1. Go to **Team Management** → **Invite Expert**
 2. Enter their email address
-3. They receive an invitation to join your organization
-4. Once accepted, their profile appears under your organization
+3. They receive an invitation to join your workspace
+4. Once accepted, their profile appears under your workspace
 
 ### Option 2: Invite New Experts
 
@@ -45,7 +45,7 @@ For experts new to Eleva Care:
 1. Go to **Team Management** → **Invite New Expert**
 2. Enter their email and name
 3. They receive an invitation to create an Eleva Care profile
-4. After setup, they're automatically added to your organization
+4. After setup, they're automatically added to your workspace
 
 <Callout type="info">
   **Expert Limits**: Starter plans support up to 3 experts, Professional up to 10, and Enterprise is unlimited.
@@ -53,13 +53,13 @@ For experts new to Eleva Care:
 
 ## Expert Dashboard
 
-From your organization dashboard, you can view:
+From your workspace dashboard, you can view:
 
 ### Expert Overview
 
 | Metric | Description |
 |--------|-------------|
-| **Total Experts** | Number of experts in your organization |
+| **Total Experts** | Number of experts in your workspace |
 | **Active Experts** | Experts who have taken bookings in the last 30 days |
 | **Published Profiles** | Experts with visible profiles |
 | **Pending Invitations** | Invitations not yet accepted |
@@ -73,22 +73,22 @@ From your organization dashboard, you can view:
 
 ## Expert Tier Benefits
 
-Experts maintain their individual tier when joining your organization:
+Experts maintain their individual tier when joining your workspace:
 
 ### Community Experts
 
 - Platform fee: 12-20%
-- Your organization fee: 10-25%
+- Your workspace fee: 10-25%
 - Expert net: 60-77%
 
 ### Top Experts
 
 - Platform fee: 8-15%
-- Your organization fee: 10-25%
+- Your workspace fee: 10-25%
 - Expert net: 60-82%
 
 <Callout type="success">
-  **Expert Protection**: Experts keep their tier benefits when joining an organization. Top experts still pay lower platform fees.
+  **Expert Protection**: Experts keep their tier benefits when joining a workspace. Top experts still pay lower platform fees.
 </Callout>
 
 ## Commission Visibility
@@ -98,7 +98,7 @@ Your experts can see a detailed breakdown of each booking:
 ```
 Booking Amount: $100.00
 ├─ Eleva Platform Fee: $8.00 (8%)
-├─ Organization Marketing Fee: $15.00 (15%)
+├─ Workspace Marketing Fee: $15.00 (15%)
 └─ Expert Net: $77.00 (77%)
 ```
 
@@ -106,31 +106,31 @@ This transparency helps build trust with your team.
 
 ## Managing Expert Permissions
 
-### Organization Admins Can:
+### Workspace Admins Can:
 
 - View expert availability and bookings
 - Access aggregate analytics
-- Configure organization-wide settings
-- Remove experts from the organization
+- Configure workspace-wide settings
+- Remove experts from the workspace
 
-### Organization Admins Cannot:
+### Workspace Admins Cannot:
 
 - Change expert's individual settings
 - Access expert's personal financial details
 - Modify expert's profile without permission
-- View bookings from other organizations
+- View bookings from other workspaces
 
 ## Removing Experts
 
-To remove an expert from your organization:
+To remove an expert from your workspace:
 
 1. Go to **Team Management**
 2. Find the expert
-3. Click **Remove from Organization**
+3. Click **Remove from Workspace**
 4. Confirm the action
 
 <Callout type="warning">
-  **Note**: Removing an expert doesn't delete their Eleva Care profile. They can continue working independently or with other organizations.
+  **Note**: Removing an expert doesn't delete their Eleva Care profile. They can continue working independently or with other workspaces.
 </Callout>
 
 ## Best Practices
@@ -152,10 +152,10 @@ To remove an expert from your organization:
 ## Next Steps
 
 <Cards>
-  <Card title="Send Invitations" href="/docs/organization/team/invitations">
+  <Card title="Send Invitations" href="/docs/workspace/team/invitations">
     Learn about the invitation process in detail
   </Card>
-  <Card title="Understand Revenue" href="/docs/organization/pricing/revenue">
+  <Card title="Understand Revenue" href="/docs/workspace/pricing/revenue">
     See how revenue is shared with your experts
   </Card>
 </Cards>
