--- a/src/content/docs/workspace/en/team/invitations.mdx
+++ b/src/content/docs/workspace/en/team/invitations.mdx
@@ -1,16 +1,16 @@
 ---
 title: Expert Invitations
-description: Step-by-step guide to inviting healthcare professionals to join your organization.
+description: Step-by-step guide to inviting healthcare professionals to join your workspace.
 ---
 
 # Expert Invitations
 
-This guide walks you through the process of inviting healthcare professionals to join your organization on Eleva Care.
+This guide walks you through the process of inviting healthcare professionals to join your workspace on Eleva Care.
 
 ## Invitation Flow
 
 ```
-You send invitation → Expert receives email → Expert reviews terms → Expert accepts → Expert joins organization
+You send invitation → Expert receives email → Expert reviews terms → Expert accepts → Expert joins workspace
 ```
 
 ## Sending Invitations
@@ -33,7 +33,7 @@ Fill out the invitation form:
 
 Click **Send Invitation**. The expert receives an email with:
 
-- Your organization name and logo
+- Your workspace name and logo
 - Your marketing fee (e.g., "15% marketing fee")
 - An explanation of the revenue model
 - A link to accept or decline
@@ -45,20 +45,20 @@ Click **Send Invitation**. The expert receives an email with:
 The invitation email includes:
 
 ```
-Subject: You're Invited to Join [Your Organization Name] on Eleva Care
+Subject: You're Invited to Join [Your Workspace Name] on Eleva Care
 
 Hi [Expert Name],
 
-[Your Organization Name] has invited you to join their healthcare team on Eleva Care.
+[Your Workspace Name] has invited you to join their healthcare team on Eleva Care.
 
 What this means for you:
-• Access to patients from [Your Organization Name]'s network
+• Access to patients from [Your Workspace Name]'s network
 • Marketing and patient acquisition support
 • Administrative assistance
 
 Revenue sharing:
 • Platform fee: 8-20% (based on your tier)
-• Organization marketing fee: 15%
+• Workspace marketing fee: 15%
 • Your net: 65-77%
 
 [Accept Invitation] [Decline Invitation]
@@ -68,8 +68,8 @@ Revenue sharing:
 
 Experts can use a calculator to see their estimated earnings:
 
-| Booking | Platform Fee | Organization Fee | Expert Net |
-|---------|-------------|------------------|------------|
+| Booking | Platform Fee | Workspace Fee | Expert Net |
+|---------|-------------|---------------|------------|
 | €100 | €8-12 | €15 | €73-77 |
 | €150 | €12-18 | €22.50 | €109.50-115.50 |
 | €200 | €16-24 | €30 | €146-154 |
@@ -111,23 +111,23 @@ When an expert accepts your invitation:
 2. Complete identity verification
 3. Set up their profile
 4. Connect Stripe for payouts
-5. Automatically join your organization
+5. Automatically join your workspace
 
 ### Existing Eleva Care Expert
 
 1. They review your terms
 2. Accept the invitation
-3. Immediately appear in your organization
+3. Immediately appear in your workspace
 4. Their existing bookings are unaffected
 
 ## Terms & Agreements
 
 When accepting, experts agree to:
 
-- Your organization's marketing fee
+- Your workspace's marketing fee
 - Revenue sharing model
 - Eleva Care's Terms of Service
-- Your organization's policies (if any)
+- Your workspace's policies (if any)
 
 <Callout type="info">
   **Fee Changes**: If you change your marketing fee after experts join, you must notify them 30 days in advance.
@@ -150,7 +150,7 @@ Common reasons and solutions:
 |--------|----------|
 | Fee too high | Consider lowering your marketing fee |
 | Unclear value | Explain your patient acquisition strategy |
-| Already in another organization | They can join multiple organizations |
+| Already in another workspace | They can join multiple workspaces |
 | Not ready | Follow up in a few weeks |
 
 ### Expert Can't Complete Setup
@@ -168,7 +168,7 @@ If an expert is stuck during onboarding:
 Instead of generic invitations:
 
 ```
-❌ "Join our organization on Eleva Care"
+❌ "Join our workspace on Eleva Care"
 
 ✅ "Hi Dr. Maria! I've been impressed by your work in women's health. 
 We'd love to have you join our team. Our patients would 
@@ -196,10 +196,10 @@ After sending invitations:
 ## Next Steps
 
 <Cards>
-  <Card title="Manage Your Team" href="/docs/organization/team/experts">
+  <Card title="Manage Your Team" href="/docs/workspace/team/experts">
     Learn about ongoing expert management
   </Card>
-  <Card title="View Analytics" href="/docs/organization/analytics/dashboard">
-    Track your organization's performance
+  <Card title="View Analytics" href="/docs/workspace/analytics/dashboard">
+    Track your workspace's performance
   </Card>
 </Cards>
