--- a/src/content/docs/developer/en/integrations/stripe.mdx
+++ b/src/content/docs/developer/en/integrations/stripe.mdx
@@ -113,7 +113,7 @@ For each payment, funds are distributed:
 Gross Payment: €100.00
 ├─ Stripe Processing: ~€2.90 (2.9% + €0.25)
 ├─ Platform Fee: €8.00 (8% for Top Expert)
-├─ Organization Fee: €15.00 (15%)
+├─ Workspace Fee: €15.00 (15%)
 └─ Expert Net: €74.10
 ```
 
