--- a/src/content/docs/workspace/en/getting-started/branding.mdx
+++ b/src/content/docs/workspace/en/getting-started/branding.mdx
@@ -1,25 +1,25 @@
 ---
 title: Customize Your Branding
-description: Make your organization stand out with custom branding and white-label options.
+description: Make your workspace stand out with custom branding and white-label options.
 ---
 
 # Customize Your Branding
 
-Make your Eleva Care presence match your organization's brand identity. This guide covers all customization options available to partner organizations.
+Make your Eleva Care presence match your brand identity. This guide covers all customization options available to workspaces.
 
 ## Standard Branding (All Plans)
 
 ### Logo & Identity
 
-Every organization can customize:
+Every workspace can customize:
 
-- **Primary Logo**: Displayed in your organization profile and expert listings
-- **Cover Image**: Banner image for your organization page
+- **Primary Logo**: Displayed in your workspace profile and expert listings
+- **Cover Image**: Banner image for your workspace page
 - **Brand Colors**: Primary and secondary colors for your profile
 
 ### Profile Customization
 
-- **Organization Description**: Tell your story and highlight what makes you unique
+- **Workspace Description**: Tell your story and highlight what makes you unique
 - **Services Offered**: List the healthcare categories you specialize in
 - **Team Bio**: Introduce your team of healthcare professionals
 - **Social Links**: Connect your Instagram, LinkedIn, and website
@@ -30,13 +30,13 @@ Every organization can customize:
 
 With the Professional plan, you unlock:
 
-- **Custom URL Slug**: `eleva.care/your-organization-name`
+- **Custom URL Slug**: `eleva.care/your-workspace-name`
 - **Branded Booking Flow**: Your logo and colors throughout the booking process
 - **Custom Confirmation Emails**: Include your branding in client communications
 
 ### Multi-Location Support
 
-If your organization has multiple locations:
+If your workspace has multiple locations:
 
 - Create separate profiles for each location
 - Share experts across locations
@@ -48,7 +48,7 @@ Enterprise partners can fully white-label the Eleva Care experience:
 
 ### Custom Domain
 
-- Use your own domain: `telehealth.your-organization.com`
+- Use your own domain: `telehealth.your-workspace.com`
 - SSL certificate included
 - Automatic redirects configured
 
