--- a/src/content/docs/workspace/en/index.mdx
+++ b/src/content/docs/workspace/en/index.mdx
@@ -1,33 +1,43 @@
 ---
-title: Welcome to Organization Portal
-description: Power your healthcare organization with Eleva Care's technology platform. Manage your team, access analytics, and grow your practice.
+title: Welcome to Workspace Portal
+description: Create and manage your workspace on Eleva Care. Set up your team, access analytics, and grow your practice.
 ---
 
-# Welcome to Organization Portal
+# Welcome to Workspace Portal
 
-Eleva Care empowers healthcare organizations—clinics, wellness centers, employers, and health institutions—to deliver digital health services through our proven platform technology. This resource center will help you set up and manage your organization effectively.
+Eleva Care empowers healthcare organizations—clinics, wellness centers, employers, and health institutions—to deliver digital health services through our proven platform technology. This resource center will help you set up and manage your workspace effectively.
 
-## Why Partner with Eleva Care?
+## What is a Workspace?
+
+A **workspace** is your dedicated space on Eleva Care where you manage your healthcare practice:
+
+- **Dr. Patricia's Workspace** - A solo practitioner's online practice
+- **Wellness Center Workspace** - A wellness center's digital health services
+- **Corporate Health Workspace** - An employer's employee wellness program
+
+Whether you're running a physical clinic, an online practice, or a hybrid model, your workspace is where it all comes together.
+
+## Why Create a Workspace?
 
 <Cards>
-  <Card title="Ready-to-Use Technology" href="/docs/organization/getting-started/setup">
+  <Card title="Ready-to-Use Technology" href="/docs/workspace/getting-started/setup">
     Skip the build phase. Our proven platform includes scheduling, video consultations, payments, and client management.
   </Card>
-  <Card title="Access Expert Network" href="/docs/organization/team/experts">
+  <Card title="Access Expert Network" href="/docs/workspace/team/experts">
     Offer your clients access to our network of independent, licensed healthcare professionals, or onboard your own team.
   </Card>
-  <Card title="Flexible Business Model" href="/docs/organization/pricing/revenue">
-    Workspace subscriptions with transparent pricing. Scale up or down based on your organization's needs.
+  <Card title="Flexible Business Model" href="/docs/workspace/pricing/revenue">
+    Workspace subscriptions with transparent pricing. Scale up or down based on your needs.
   </Card>
 </Cards>
 
 ## How It Works
 
-### For Your Organization
+### For Your Workspace
 
 1. **Apply & Get Approved** - Submit your partnership application (5 business days)
-2. **Setup Your Profile** - Create your organization profile with branding and services
-3. **Onboard Your Experts** - Invite healthcare professionals to join your practice
+2. **Set Up Your Workspace** - Create your workspace profile with branding and services
+3. **Onboard Your Experts** - Invite healthcare professionals to join your team
 4. **Launch & Grow** - Start receiving bookings and track performance
 
 ### What We Provide
@@ -47,27 +57,27 @@ Eleva Care empowers healthcare organizations—clinics, wellness centers, employ
 - ✅ Administrative support for your experts
 
 <Callout type="info">
-  **Partnership Model**: Eleva Care provides the technology platform. Your organization manages the healthcare services through your team of independent professionals.
+  **Partnership Model**: Eleva Care provides the technology platform. Your workspace manages the healthcare services through your team of independent professionals.
 </Callout>
 
-## Who Can Partner?
+## Who Can Create a Workspace?
 
 <Cards>
-  <Card title="Medical Practices" href="/docs/organization/getting-started/setup">
+  <Card title="Medical Practices" href="/docs/workspace/getting-started/setup">
     OB/GYN clinics, women's health centers, primary care practices, specialty groups
   </Card>
-  <Card title="Wellness Centers" href="/docs/organization/getting-started/setup">
+  <Card title="Wellness Centers" href="/docs/workspace/getting-started/setup">
     Integrative health centers, holistic wellness spaces, mind-body centers
   </Card>
-  <Card title="Mental Health" href="/docs/organization/getting-started/setup">
+  <Card title="Mental Health" href="/docs/workspace/getting-started/setup">
     Therapy practices, counseling centers, perinatal mental health specialists
   </Card>
-  <Card title="Employers & Institutions" href="/docs/organization/getting-started/setup">
+  <Card title="Employers & Institutions" href="/docs/workspace/getting-started/setup">
     Corporate wellness programs, health benefits providers, educational institutions
   </Card>
 </Cards>
 
-## Partnership Tiers
+## Workspace Plans
 
 ### Starter Plan
 
@@ -79,7 +89,7 @@ Perfect for small practices getting started:
 
 ### Professional Plan
 
-Ideal for growing organizations:
+Ideal for growing workspaces:
 - Up to 10 expert profiles
 - Advanced analytics & insights
 - Priority support
@@ -95,7 +105,7 @@ For large organizations:
 - Dedicated account manager
 - **Custom pricing**
 
-[Compare plans →](/docs/organization/pricing/plans)
+[Compare plans →](/docs/workspace/pricing/plans)
 
 ## Revenue Model
 
@@ -105,39 +115,39 @@ Our three-party revenue model ensures fair compensation for everyone:
 |-------|--------------|---------|
 | **Patient** | Pays full amount | For healthcare services |
 | **Expert** | 60-77% minimum | Service delivery |
-| **Organization** | 10-25% | Patient acquisition, marketing |
+| **Workspace** | 10-25% | Patient acquisition, marketing |
 | **Eleva** | 8-20% | Platform, technology, payments |
 
 <Callout type="success">
-  **Expert Protection**: Experts always receive at least 60% of the booking amount. Combined fees (platform + organization) never exceed 40%.
+  **Expert Protection**: Experts always receive at least 60% of the booking amount. Combined fees (platform + workspace) never exceed 40%.
 </Callout>
 
-[Learn about revenue sharing →](/docs/organization/pricing/revenue)
+[Learn about revenue sharing →](/docs/workspace/pricing/revenue)
 
 ## Getting Started Checklist
 
 Before you can start receiving bookings, complete these steps:
 
-- [ ] **Apply for partnership** - Submit your organization credentials
-- [ ] **Set up organization profile** - Add branding, services, and team info
+- [ ] **Apply for partnership** - Submit your credentials
+- [ ] **Set up workspace profile** - Add branding, services, and team info
 - [ ] **Configure pricing** - Set your marketing fee (10-25%)
 - [ ] **Invite experts** - Onboard your healthcare professionals
 - [ ] **Connect Stripe** - Set up payment processing
-- [ ] **Go live** - Publish your organization profile
+- [ ] **Go live** - Publish your workspace profile
 
 ## Quick Links
 
 <Cards>
-  <Card title="Set Up Your Organization" href="/docs/organization/getting-started/setup">
-    Create your organization profile and branding
+  <Card title="Set Up Your Workspace" href="/docs/workspace/getting-started/setup">
+    Create your workspace profile and branding
   </Card>
-  <Card title="Manage Your Team" href="/docs/organization/team/experts">
+  <Card title="Manage Your Team" href="/docs/workspace/team/experts">
     Invite and manage healthcare professionals
   </Card>
-  <Card title="View Analytics" href="/docs/organization/analytics/dashboard">
+  <Card title="View Analytics" href="/docs/workspace/analytics/dashboard">
     Track utilization, outcomes, and ROI
   </Card>
-  <Card title="Understand Pricing" href="/docs/organization/pricing/plans">
+  <Card title="Understand Pricing" href="/docs/workspace/pricing/plans">
     Learn about plans and revenue sharing
   </Card>
 </Cards>
